# SonicForge

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  OPTIMIZATION_MASTER_PLAN.md  README.md  docker-compose.phase2.yml  docker-compose.redis-ha.yml  docker-compose.yml
.emergent/: emergent.yml  summary.txt
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.musicgen  alembic.ini  pyproject.toml  server.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/agents/: __init__.py  analytics.py  base.py  composer.py  critic.py  producer.py  scheduler.py  stream_master.py  visual.py
backend/app/analytics/: __init__.py  ab_testing.py  dashboard.py  pipeline.py
backend/app/api/: analytics_routes.py  auth_routes.py  phase5_routes.py  routes.py  webhook_routes.py  websocket.py  websocket_live.py
backend/app/core/: cache.py  celery_app.py  config.py  connection_pool.py  database.py  logging.py  storage.py  tracing.py
backend/app/features/: __init__.py  payments.py  recommendations.py  social_sharing.py  voting.py
backend/app/models/: analytics.py  stream.py  track.py
backend/app/monitoring/: anomaly_detector.py
backend/app/schemas/: analytics.py  stream.py  track.py
backend/app/security/: __init__.py  api_keys.py  auth.py  health_checks.py  input_validation.py  middleware.py  rate_limiter.py  rbac.py
backend/app/services/: acestep_service.py  adaptive_streaming.py  audio_engineering.py  audio_fingerprinting.py  batch_processor.py  mastering_pro.py  memory_manager.py  multi_platform_streaming.py  musicgen_optimized.py  musicgen_service.py  orchestrator.py  realtime_analyzer.py  stable_audio_service.py  tasks.py  tts_service.py
backend/tests/: test_agents.py  test_api.py  test_sonicforge_api.py
dashboard/: .env.example  Dockerfile  package.json  tailwind.config.ts
dashboard/public/: sw.js
docs/: IMPLEMENTATION_GUIDE.md  OPTIMIZATION_CHECKLIST.md
examples/: QUICK_START.md
examples/optimizations/: cache.py  connection_pool.py  musicgen_optimized.py
kubernetes/: api-deployment.yaml  namespace.yaml  secrets.yaml
memory/: PRD.md
redis/: sentinel.conf
streaming/: Dockerfile  nginx-rtmp.conf
test_reports/: iteration_1.json
(+14 files in other folders)
