[project]
name = "sonicforge"
version = "2.0.0"
description = "AI-Powered 24/7 Music Radio Platform — Open-Source Edition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    # Audio processing & mastering
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "soundfile>=0.12.1",
    "pyloudnorm>=0.1.1",
    # AI Music Generation (AudioCraft)
    # NOTE: audiocraft 1.3.0 requires torch==2.1.0 exactly, so we pin to 2.1.x
    "audiocraft>=1.3.0",
    "torch~=2.1.0",
    "torchaudio~=2.1.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    # Web & API
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "websockets>=14.0",
    # LLM APIs (prompt crafting)
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    # Monitoring & notifications
    "python-telegram-bot>=21.7",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    # Distributed tracing
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    # Anomaly detection
    "scikit-learn>=1.3.0",
    "psutil>=5.9.0",
    # Legacy fallback (optional)
    "replicate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
